tests/ui/trait-bound-not-satisfied.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
 --> tests/ui/trait-bound-not-satisfied.rs:9:12
  |
9 |     Static(usize),
  |            ^^^^^ the trait `Trait` is not implemented for `usize`
  |
help: this trait has no implementations, consider adding one
 --> tests/ui/trait-bound-not-satisfied.rs:5:1
  |
5 | trait Trait {}
  | ^^^^^^^^^^^
  = help: see issue #48214
